# agvn-main

./: README.md
backend/: .env  .gitignore  Cargo.toml  README.md  requirements.txt
backend/SampleJson/: sampleUser.json  sampleUserPassword.json  sampleUserRelated.json  sample_elec.json  sample_user.json
backend/aeros/: README.md  gcoin.py  p2p-send.sh  receive-message.sh  requirements.txt  run-server.sh  server.py
backend/aeros/tests/: test_gcoin.py  test_server.py
backend/chatbot/: dialoGPT.py  model.py  server.py  train.py  train_dialo.py
backend/chatbot-model/: README.md  chat.py  data.pth  nltk_utils.py  server.py
backend/chatbot/tests/: test_functionality.py  test_server.py
backend/data/: README.md  gen_poll.py  gen_vote.py  gpt_neo_tests.py
backend/data/json_generator/: README.md  electoral_district.py  main.py  requirements.txt
backend/emailserver/: App.js  README.md  package-lock.json  package.json  send-mail.sh
backend/ml-lib/: .gitignore  BAUtils.py  README.md  _aux.py  behavioral.py  generate_blog.py  generate_poll.py  ml_api.py  requirements.txt  server.py  summarizer.py
backend/scraper/: .gitignore  README.md  requirements.txt  server.py
backend/scripts/: README.md  _aux.py  copy_to_database.sh  dump_from_database.sh  gen_contribution_benefits.py  gen_data.py  gen_departments.py  gen_poll.py  gen_users.py  hash.py  install-dependencies
backend/src/: lib.rs  main.rs  schema.rs
backend/webserver/: Dockerfile  docker-compose.yaml  pytest.ini  requirements.txt
system-core/: Cargo.toml  README.md
system-core/src/: main.rs
(+220 files in other folders)
