[package]
edition = "2021"
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = {version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"
redis = "0.21.5"

# TODO: add system-core dep
# from github
