[package]
name = "system-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.5.1"
linfa-svm = "0.5.0"
linfa-datasets = { version = "0.5.1", features = ["winequality"] }
pyo3 = { version = "0.16.4", features = ["extension-module"] }
csv = "1.1.6"
glam = "0.20.5"
